2007-09-09  higepon  <higepon@users.sourceforge.jp>

        * core/monalibc/stdlib/qsort.c (qsort): Fixed bug of qsort.

2007-09-08  higepon  <higepon@users.sourceforge.jp>

        * core/scheme: Removed Asignment.cpp and added FOREACH_LIST.
                       svn merge -r4572:HEAD . ~/mona/core/scheme

        * core/scheme: Speed up, traditional macro, true S expression.
                       svn merge -r4499:HEAD scheme-quote ../trunk/mona/core/scheme

2007-08-30  higepon  <higepon@users.sourceforge.jp>

        * core/monalibc/stdio/fread.c (fread): Changed return value -1 to 0 when error.

        * core/monalibc/stdio/fgetc.c (fgetc): Changed return value check of fread.

2007-08-12  higepon  <higepon@users.sourceforge.jp>

        * core/scheme/Translator.cpp (Translator::translateDefinitionMacro): Added define-macro.

2007-08-11  higepon  <higepon@users.sourceforge.jp>

        * core/scheme: Added quasiquote support.

2007-08-10  higepon  <higepon@users.sourceforge.jp>

        * Moved scheme-gc to mona/core/scheme.

2007-07-14  higepon  <higepon@users.sourceforge.jp>

        * core/kernel/PageManager.cpp (PageManager::pageFaultHandler): Changed a stack over flow message.

        * core/scheme/test/pair.scm ("lambda's argument"): Added a test for lambda's arguments.

        * core/scheme/Procedure.cpp (Procedure::apply): Fixed a lambda's arguments bug.

        * core/scheme/lib/shell.scm.in (ls): ls takes a argument.

        * core/scheme/histories.cpp: Added for a input history.

        * core/scheme/install-mona.sh: Added for easy development.

2007-07-13  higepon  <higepon@users.sourceforge.jp>

        * core/scheme/SRegexp.cpp (SRegexp::apply): Now we can apply regex to mona object.

2007-07-12  higepon  <higepon@users.sourceforge.jp>

        * core/scheme/scheme.h (SCM_APPLY_PROC): Added for apply proc from string.

        * core/scheme/lib/core.scm.in: Add unless macro.

2007-07-09  higepon  <higepon@users.sourceforge.jp>
