@@ -4,7 +4,7 @@ include $(SRCTOP)/Makefile.inc
 TARGET  = SCHEME
 INSTDIR = $(BINDIR)/SERVERS
 include Makefile.src.inc
-include Makefile.mona_gc.inc
+#include Makefile.mona_gc.inc
 include Makefile.onig.inc
 
 TARGET_LIBS = lib/interact.scm lib/batch.scm lib/danny.scm lib/unittest.scm lib/core.scm lib/shell.scm lib/mona.scm lib/conf.scm lib/fib.scm lib/demo.scm
